--- a/index.html
+++ b/index.html
@@ -1,111 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CloudNic – Smart Home & Security Solutions</title>
-  <link rel="stylesheet" href="style.css"/>
+  <title>CloudNic Ltd.</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1 class="logo">CloudNic</h1>
-      <nav>
-        <ul class="nav-links">
-          <li><a href="#home">Home</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#contact">Get in Touch</a></li>
-        </ul>
-        <div class="hamburger" id="hamburger">
-          <span></span><span></span><span></span>
-        </div>
-      </nav>
-    </div>
+  <header class="nav">
+    <img src="images/cloudnic-logo.png" alt="CloudNic Logo" class="logo"/>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="services.html">What We Do</a>
+      <a href="about.html">About</a>
+      <a href="products.html">Products</a>
+    </nav>
   </header>
 
-  <section id="home" class="hero">
-    <div class="hero-content">
-      <h2>Your Trusted Partner in Home Networking & Security</h2>
-      <p>Smart solutions for modern living.</p>
-      <a href="#services" class="btn">Explore Services</a>
-    </div>
+  <section class="hero">
+    <h1>Welcome to CloudNic Ltd.</h1>
+    <p>Innovative Cloud Networking Solutions</p>
   </section>
 
-  <section id="services" class="services-section">
-    <div class="container">
-      <h2>Our Services</h2>
-      <div class="services-grid">
-        <div class="service-card">
-          <h3>🏠 Home Networking</h3>
-          <p>Robust Wi‑Fi setups, mesh systems, wiring & ethernet installations.</p>
-        </div>
-        <div class="service-card">
-          <h3>🔒 Home Security</h3>
-          <p>Smart cameras, alarms, monitoring & full security integration.</p>
-        </div>
-        <div class="service-card">
-          <h3>🔌 Smart Home Planning</h3>
-          <p>Lighting, thermostats, voice assistants, automation & custom design.</p>
-        </div>
-      </div>
-    </div>
+  <section class="services">
+    <h2>What We Do</h2>
+    <p>Cloud infrastructure, network engineering, and scalable solutions for modern businesses.</p>
   </section>
 
-<section id="pricing" class="pricing-section">
-  <div class="container">
-    <h2>Our Pricing</h2>
-    <div class="pricing-cards">
-      <div class="price-card">
-        <h3>Basic</h3>
-        <p class="price">$199</p>
-        <ul>
-          <li>Wi-Fi Setup</li>
-          <li>Router Optimization</li>
-          <li>Email Support</li>
-        </ul>
-        <a href="#contact" class="btn">Choose Plan</a>
-      </div>
-      <div class="price-card highlighted">
-        <h3>Standard</h3>
-        <p class="price">$499</p>
-        <ul>
-          <li>Smart Security System</li>
-          <li>Network Hardwiring</li>
-          <li>24/7 Monitoring</li>
-        </ul>
-        <a href="#contact" class="btn">Choose Plan</a>
-      </div>
-      <div class="price-card">
-        <h3>Premium</h3>
-        <p class="price">$899</p>
-        <ul>
-          <li>Full Smart Home Integration</li>
-          <li>Custom Automation</li>
-          <li>Priority Support</li>
-        </ul>
-        <a href="#contact" class="btn">Choose Plan</a>
-      </div>
-    </div>
-  </div>
-</section>
+  <section class="pricing">
+    <h2>Service Charges</h2>
+    <ul>
+      <li>Basic Setup – £299</li>
+      <li>Advanced Cloud Integration – £999</li>
+      <li>Managed Services – Contact us</li>
+    </ul>
+  </section>
 
-  <section id="contact" class="contact-section">
-    <div class="container">
-      <h2>Contact Us</h2>
-      <form id="contactForm">
-        <input type="text" id="name" placeholder="Your Name" required />
-        <input type="email" id="email" placeholder="Your Email" required />
-        <textarea id="message" placeholder="Your Message" required></textarea>
-        <button type="submit">Submit</button>
-      </form>
-      <p id="formMessage" class="form-message"></p>
-    </div>
+  <section class="about">
+    <h2>About CloudNic</h2>
+    <p>We're a passionate team delivering secure, scalable cloud network systems.</p>
+  </section>
+
+  <section class="contact">
+    <h2>Contact Us</h2>
+    <form action="php/sendmail.php" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <input type="text" name="subject" placeholder="Subject" required />
+      <textarea name="message" placeholder="Your Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
   </section>
 
   <footer>
-    <p>&copy; 2025 CloudNic. All rights reserved.</p>
+    <img src="images/cloudnic-logo.png" alt="CloudNic Logo" class="footer-logo"/>
+    <p>📞 +44 1234 567890</p>
   </footer>
 
-  <script src="script.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
